Clear pattern to prevent timing problem between cancelVibration and vibrate https://bugs.webkit.org/show_bug.cgi?id=93957

Patch by Kihong Kwon <kihong.kwon@samsung.com> on 2012-08-14
Reviewed by Kentaro Hara.

There is a timing issue in the cancelVibration.
Since vibrate works based on timer, cancelVibration might be called
eariler than vibrate when cancelVibration is called just after vibrate call.
It can be prevented from clearing m_pattern in the cancelVibration.

* Modules/vibration/Vibration.cpp:
(WebCore::Vibration::cancelVibration):

git-svn-id: svn://svn.chromium.org/blink/trunk@125624 bbb929c8-8fbe-4397-9dbb-9b2b20218538