third_party/WebKit/Source/WebCore/Modules/vibration/Vibration.cpp
@@ -74,6 +74,7 @@ void Vibration::vibrate(const VibrationPattern& pattern)
 
 void Vibration::cancelVibration()
 {
+    m_pattern.clear();
     if (m_isVibrating) {
         m_vibrationClient->cancelVibration();
         m_isVibrating = false;
